--- a/stylesBackInTime.css
+++ b/stylesBackInTime.css
@@ -237,4 +237,12 @@ button:hover {
         font-size: 1rem;
         padding: 8px 16px;
     }
+    .menu-label {
+    color: rgb(211, 187, 187);
+    font-weight: bold;
+    font-style: italic;     /* ✅ corsivo */
+    margin-left: 10px;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+}
 }
